--- a/child-apps/child-a/package.json
+++ b/child-apps/child-a/package.json
@@ -19,6 +19,7 @@
     "caniuse-lite": "^1.0.30001603",
     "clipboard": "^2.0.11",
     "docx-preview": "^0.3.2",
+    "jszip": "3.9.x",
     "less": "^4.1.2",
     "vue": "3.2.x",
     "vue-demi": "^0.13.11",
