--- a/child-apps/child-a/package.json
+++ b/child-apps/child-a/package.json
@@ -23,7 +23,8 @@
     "less": "^4.1.2",
     "vue": "3.2.x",
     "vue-demi": "^0.13.11",
-    "vue-router": "^4.0.14"
+    "vue-router": "^4.0.14",
+    "xgplayer": "^3.0.18"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.1.1",
